--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,50 +1,36 @@
-<!-- <ion-header collapse="collapse" class="ion-no-border">
-    <ion-toolbar color='primary'>
-      <ion-title size="large">Lista do mês</ion-title>
-    </ion-toolbar>
-  </ion-header> -->
 
 <ion-header [translucent]="true">
-    <ion-toolbar color="'primary">
-        <ion-title>Lista do mês</ion-title>
-    </ion-toolbar>
+  <ion-toolbar color="'primary">
+    <ion-title>Lista do mês</ion-title>
+  </ion-toolbar>
 </ion-header>
 <ion-content [fullscreen]="true">
 
+  <ion-list>
+    <ion-item>
+      <ion-select (ionChange)="handleChange($event)" aria-label="fruit" placeholder="Selecione a Lista do mês">
+        <ion-select-option *ngFor="let item of data; let i=index"
+          value="{{item.title}}">{{item.title}}</ion-select-option>
+      </ion-select>
+    </ion-item>
+  </ion-list>
 
-
-    <!-- <ion-item *ngFor="let item of data; let i=index"> -->
-
-        <!-- <ion-checkbox ng-show="newTrustFormVisible" slot="start" checked="{{item['check'].value}}">
-        </ion-checkbox>
-        <ion-input type="text" label="Item" labelPlacement="floating" class="form-control item" id="name"
-            value="{{item['name']}}"></ion-input>
-        <ion-input type="number" label="Qtd" labelPlacement="floating" class="form-control qtd"
-            value="{{item['qtd']}}"></ion-input>
-        <ion-input type="number" label="R$" labelPlacement="floating" class="form-control money" placeholder="R$"
-            value="{{item['money']}}"></ion-input>
- -->
-
-                <!-- <ion-select aria-label="fruit" placeholder="Select fruit">
-                    <ion-select-option value="i">{{item.title}}</ion-select-option>
-                </ion-select>
-      -->
-
-      <ion-list>
-        <ion-item >
-          <ion-select   (ionChange)="handleChange($event)" aria-label="fruit" placeholder="Selecione a Lista do mês">
-            <ion-select-option  *ngFor="let item of data; let i=index" value="{{item.title}}">{{item.title}}</ion-select-option>
-          </ion-select>
-        </ion-item>
-      </ion-list>
-
-    <!-- </ion-item> -->
-
-
-
-    <!-- <ion-button (click)="getFormStorage()">
-        Buscar Itens
-    </ion-button> -->
-
-
+  <ion-list>
+    <ion-reorder-group [disabled]="false" (ionItemReorder)="handleReorder($any($event))">
+      <ion-item *ngFor="let item of dado; let i = index">
+        <ion-checkbox slot="start" [(ngModel)]="item.check" (ionChange)="checkboxClick($event, item.money)"></ion-checkbox>
+        <ion-input disabled [ngClass]="{ 'line-through': item.check }" type="text" [value]="item.name + ' (Qtd: ' + item.qtd + ') - R$ ' + item.money"></ion-input>
+        <ion-reorder slot="end"></ion-reorder>
+      </ion-item>
+    </ion-reorder-group>
+  </ion-list>
 </ion-content>
+
+<ion-footer class="total-calculate">
+  <i class="fa-solid fa-calculator"></i>
+  <div class="count"> 
+
+    <label> Previsão: {{previsaoDeGasto}}</label>
+    <label> Gasto: {{total}}</label>
+  </div>
+</ion-footer>
